--- a/src/apps/content-editor/src/app/views/ItemEdit/Content/ActionsDrawer/ActionsDrawer.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Content/ActionsDrawer/ActionsDrawer.less
@@ -10,13 +10,12 @@
   height: calc(100vh - 54px - 73px - 58px);
   overflow-y: scroll;
 
-  //FireFox
-  scrollbar-width: none;
+  scrollbar-width: none; /*  FireFox */
+  -ms-overflow-style: none; /*  Edge */
 
   //Hide Scrollbar
   ::-webkit-scrollbar {
-    width: 0;
-    background: transparent;
+    display: none;
   }
   .Quickbar {
     height: calc(100vh - 54px - 73px - 58px);
@@ -51,13 +50,11 @@
     height: calc(100vh - 54px - 73px - 58px);
     overflow: auto;
 
-    //FireFox
-    scrollbar-width: none;
-
     //Hide Scrollbar
+    scrollbar-width: none; /*  FireFox */
+    -ms-overflow-style: none; /*  Edge */
     ::-webkit-scrollbar {
-      width: 0;
-      background: transparent;
+      display: none;
     }
   }
 
